--- a/views/partials/hourtypes.html
+++ b/views/partials/hourtypes.html
@@ -8,7 +8,7 @@
     <!-- Hour types will be loaded here -->
   </div>
 
-  <div style="margin-top:24px;">
+  <div class="ts-page-actions">
     <button id="btn-add-hour-type">Add Hour Type</button>
   </div>
 </section>
